--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,9 +11,9 @@ name = "subscription-manager-staging"
 
 # KV 命名空间配置
 [[kv_namespaces]]
-binding = "SUBSCRIPTIONS_KV"
+binding = "tracker"
 preview_id = "your-preview-kv-namespace-id"
-id = "your-production-kv-namespace-id"
+id = "abda39deaa2247ec9aac4b84c16eea09"
 
 # 定时任务配置 - 每天早上8点检查
 [triggers]
