--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,7 +11,7 @@ name = "subscription-manager-staging"
 
 # KV 命名空间配置
 [[kv_namespaces]]
-binding = "tracker"
+binding = "SUBSCRIPTIONS_KV"
 preview_id = "your-preview-kv-namespace-id"
 id = "abda39deaa2247ec9aac4b84c16eea09"
 
